# bistun

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  PROJECT-MAP.md  PROJECT-STRUCTURE.md  README.md  ROADMAP.md  SECURITY.md  TEMPLATE.rs  clippy.toml  justfile  rustfmt.toml  update_snapshot.sh
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
ai/rules/: lms-enforcer.md
ai/templates/: LMS-DOC.md  blueprint.md  cargo-template.toml  module.rs  workspace-template.toml
benches/: capability_engine.rs  performance_verification.rs
crates/bistun-api/: Cargo.toml  README.md
crates/bistun-api/benches/: api_performance.rs
crates/bistun-api/examples/: README.md  embedded_server.rs
crates/bistun-api/src/: README.md  config.rs  error.rs  lib.rs  main.rs
crates/bistun-api/src/handlers/: README.md  capability.rs  health.rs  mod.rs  webhook.rs
crates/bistun-api/src/routes/: README.md  mod.rs  v1.rs
crates/bistun-api/tests/: api_integration.rs
crates/bistun-core/: Cargo.toml  README.md
crates/bistun-core/examples/: build_manifest.rs
crates/bistun-core/src/: README.md  error.rs  lib.rs  manifest.rs  ops.rs  registry.rs  simulation.rs  traits.rs
crates/bistun-core/tests/: dto_integration.rs
crates/bistun-lms/: Cargo.toml  README.md
crates/bistun-lms/benches/: capability_engine.rs  performance_verification.rs
crates/bistun-lms/examples/: hot_swap_demo.rs  standalone_resolver.rs
crates/bistun-lms/src/: lib.rs  manager.rs
crates/bistun-lms/src/core/: README.md  mod.rs  pipeline.rs
crates/bistun-lms/src/core/aggregator/: README.md  mod.rs  typology.rs
crates/bistun-lms/src/core/extension/: README.md  mod.rs  orthography.rs
crates/bistun-lms/src/core/resolver/: alias.rs  exact.rs  fallback.rs  mod.rs  orchestrator.rs  test_utils.rs  truncation.rs
crates/bistun-lms/src/core/resource/: mod.rs  resolver.rs
crates/bistun-lms/src/core/synthesizer/: mod.rs  rules.rs
crates/bistun-lms/src/data/: mod.rs  providers.rs  repository.rs  store.rs  swap.rs
crates/bistun-lms/src/ops/: README.md  telemetry.rs
crates/bistun-lms/src/security/: README.md  verifier.rs
crates/bistun-lms/src/validation/: README.md  integrity.rs
crates/bistun-lms/tests/: engine_integration.rs
data/: snapshot.sig  todo.md
docs/: 001-lms-core.md  002-lms-data.md  003-lms-val.md  004-lms-ext.md  007-lms-ops.md  008-lms-dna.md  009-lms-strat.md  012-lms-eng.md  03_fallback_aggregation_algorithm_whitepaper.0.1.4.md  LMS-DOC.md  README.0.1.4.md  ROADMAPv_1_0_0.md  bistun-lms-readiness-1_0_0.md  curator-ui-beta.md  lms-core-01_0.1.4.md  lms-ext-01_0.1.3.md  lms-ingest-01_0.1.3.md  lms-sec-01_0.1.3.md  lms-val-01_0.1.3.md  openapi.yaml  overview.md
docs/archives/: 011-lms-dto.md  013-lms-rule.md
docs/archives/v0.8.0/: 011-lms-dto.md
docs/blueprints/: 001-lms-core.md  003-lms-val.md  005-lms-ingest.md  006-lms-sec.md  008-lms-typology-aggregator.md  010-lms-mem.md  011-lms-dto.md  013-lms-rule.md  014-lms-brdg.md  ai-gemini-gem-instruction.md
docs/foundations/: 00-system-overview.md  01-master-plan.md  02-tech-specs.md  03-algorithm-whitepaper.md
docs/processes/: LMS-PROCESS-BENCH.md  LMS-PROCESS-CI.md  LMS-PROCESS-ERROR.md  LMS-PROCESS-HOOKS.md  LMS-PROCESS-JUST.md  LMS-PROCESS-LABELS.md  LMS-PROCESS-PR.md  LMS-PROCESS-RELEASE.md  LMS-PROCESS-TELEMETRY.md
docs/standards/: BSTN-CRATE-README-TEMPLATE.md  BSTN-MONOREPO-README-TEMPLATE.md  LMS-AI.md  LMS-DOC.md  LMS-GLOSSARY.md  LMS-MODULE-README-TEMPLATE.md  LMS-STACK.md  LMS-TEST.md  TEMPLATE.rs
examples/: README.md  sidecar.rs
scripts/: fetch_standards.sh
specifications/: 01_development_plan_0.1.4.md  02_technical_specifications_0.1.4.md  README.0.1.4.md  lms-core-01_0.1.3.md  lms-data-01_0.1.3.md  lms-dna-01_0.1.3.md  lms-dto-01_0.1.3.md  lms-eng-01_0.1.3.md  lms-mem-01_0.1.3.md  lms-ops-01_0.1.3.md  lms-strat-01_0.1.3.md
src/: README.md  lib.rs  main.rs  manager.rs
src/core/: README.md  mod.rs  pipeline.rs
src/core/aggregator/: README.md  mod.rs  typology.rs
src/core/extension/: README.md  mod.rs  orthography.rs
src/core/resolver/: README.md  alias.rs  bcp47.rs  exact.rs  fallback.rs  mod.rs  orchestrator.rs  test_utils.rs  truncation.rs
src/core/resource/: README.md  resolver.rs
src/data/: README.md  mod.rs  providers.rs  repository.rs  store.rs  swap.rs
src/data/compiler/: README.md  ingest.rs  linter.rs  mod.rs
src/models/: README.md  error.rs  manifest.rs  mod.rs  traits.rs
src/ops/: README.md  mod.rs  telemetry.rs
src/security/: mod.rs  verifier.rs
src/strategy/: mod.rs
src/strategy/segmentation/: character.rs  dictionary.rs  mod.rs  none.rs  space.rs
src/strategy/stemming/: isolating.rs  mod.rs
src/validation/: README.md  integrity.rs  mod.rs
tests/: README.md  qa_edge_cases.rs  stress_tests.rs
