[package]
name = "bistun"
version = "0.8.0"
authors = ["Francis Xavier Wazeter IV"]
edition = "2024"

[dependencies]
# Core dependencies will be added in Chunk 1
# Error Handling: Standardized per LMS-PROCESS-ERROR
thiserror = "2.0.18"

# Observability: Standardized per LMS-PROCESS-ERROR
tracing = { version = "0.1.44", features = ["attributes"]}

# Serialization: Required for CapabilityManifest DTOs
serde = { version="1.0.228", features = ["derive"]}
serde_json = "1.0.149"

# Performance: High-speed collections for Flyweight pools
hashbrown = { version="0.17.0", features = ["serde"]}
tokio = {version="1.52.2", features = ["rt-multi-thread", "time", "fs"]}
reqwest = "0.13.3"

arc-swap = "1.9.1"

# Cryptographic verification
ed25519-dalek = { version = "2.2.0", features = ["rand_core"]}
rand = "0.8.5"
base64 = "0.22.1"


# Thread safe singleton
once_cell = "1.21.4"

[dev-dependencies]
# Required for hermetic mocking in isolation.
mockall = "0.14.0"
# Required for statistically significant performance verification
criterion = { version = "0.8.2", features = ["html_reports"] }
# Manages temporary files
tempfile = "3.27.0"
axum = "0.8.9"
http = "1.4.0"
tokio = { version = "1.52.2", features=["full"] }
tracing-subscriber = "0.3.23"
tower = "0.5.3"

[[bench]]
name = "performance_verification"
harness = false # Required to use Criterion's custom harness