[workspace]
resolver = "2"

members = [
    "crates/bistun-core",
    "crates/bistun-lms",
    "crates/bistun-api",
]

[workspace.package]
version = "0.9.0"
authors = ["Francis Xavier Wazeter IV"]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/fwazeter/bistun"

[workspace.dependencies]
# Internal Workspace Members
bistun-core = { path = "crates/bistun-core", version = "1.0.0" }
bistun-lms = { path = "crates/bistun-lms", version = "0.9.0" }

# Production Dependencies (Shared)
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = { version = "0.1.44", features = ["attributes"] }
hashbrown = { version = "0.17.0", features = ["serde"] }
dotenvy = "0.15.7"

# Development & Test Dependencies
mockall = "0.14.0"
criterion = { version = "0.8.2", features = ["html_reports"] }