[package]
name = "bistun-lms"
version = "1.0.0"
description = "A thread-safe capability engine for resolving BCP 47 language tags into actionable rendering and parsing properties (directionality, morphology, segmentation). Features a wait-free, lock-free memory pool (ArcSwap) enabling zero-downtime registry hot-swaps for high-throughput NLP and UI pipelines."
repository = "https://github.com/fwazeter/bistun"
homepage = "https://github.com/fwazeter/bistun"
documentation = "https://docs.rs/bistun-lms"
readme = "README.md"
keywords = ["i18n", "bcp47", "localization", "linguistics", "capability-engine"]
categories = ["internationalization", "text-processing"]
authors.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Standard servers get full async and file/network I/O out of the box.
# WASM/Edge consumers can opt out via `default-features = false`.
default = ["fs", "network", "async-worker"]

# Enables FileSnapshotProvider
fs = ["tokio/fs"]

# Enables HttpSnapshotProvider
network = ["dep:reqwest"]

# Enables the background polling worker (forces Tokio runtime)
async-worker = ["tokio/rt-multi-thread", "tokio/time"]

# Enables the hermetic simulation data and dynamic Ed25519 key generation
simulation = ["dep:rand", "ed25519-dalek/rand_core"]

[dependencies]
bistun-core = { workspace = true, features = ["persistence", "ops", "testing"] }
serde_json = { workspace = true }
tracing = { workspace = true }
arc-swap = "1.9.1"

# Concurrency & Async
tokio = { version = "1.52.2", optional = true }

# Optional Network I/O
reqwest = { version = "0.13.3", optional = true }

# Cryptographic verification (Verification only by default, no generation)
ed25519-dalek = { version = "2.2.0" }
base64 = "0.22.1"

# Simulation / Golden Data
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
mockall = { workspace = true }
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3.27.0"
tokio = { version = "1.52.2", features = ["full"] }


[[bench]]
name = "performance_verification"
harness = false
required-features = ["simulation"]